--- a/litestream.yml
+++ b/litestream.yml
@@ -7,8 +7,9 @@ dbs:
         access-key-id: "${LITESTREAM_ACCESS_KEY_ID}"
         secret-access-key: "${LITESTREAM_SECRET_ACCESS_KEY}"
         bucket: "${LITESTREAM_BUCKET}"
-        path: "${LITESTREAM_PATH}"
+        path: "kuma.db"
         endpoint: "${LITESTREAM_URL}"
         region: "${LITESTREAM_REGION}"
         retention: 72h
         snapshot-interval: 12h
+        restore: true
